--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 	<div id="wrapper" style="margin-left:auto; margin-right:auto;">
 		<div class="header">
-        	<h1>Yiming's Maze Game</h1>
+        	<h1>Yiming's Maze Puzzle</h1>
         	<p style="margin-bottom: 0">Complete the Maze in <span id="timeLimit"></span> seconds</p>
         </div>
         <button type="button" class="btn btn-secondary helpBtn" data-toggle="modal" data-target="#controls">
